# afoo

./: .clang-format  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
scripts/: commands.sh
src/: CMakeLists.txt  afoo.xml  package.xml
src/actuators/: afoo_actuator.cpp  sabertooth_motor_controller.cpp
src/bringup/config/: afoo_controllers.yaml
src/bringup/launch/: afoo.launch.py  afoo.launch.sim.py
src/description/launch/: view_robot.launch.py
src/description/ros2_control/: afoo.ros2_control.xacro
src/description/urdf/: afoo.urdf.xacro  afoo_description.urdf.xacro
src/include/afoo/actuators/: afoo_actuator.hpp  sabertooth_motor_controller.hpp
src/include/afoo/io/: boost_serial_device.hpp  boost_serial_device_manager.hpp  io_interface.hpp  status.hpp
src/io/: boost_serial_device.cpp  boost_serial_device_manager.cpp
